fix: clean up whitespace and formatting across multiple files

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1457,7 +1457,7 @@ Custom CSS
 body {
   background-image: url("../../assets/img/svg/curvas_blanco.svg"),
     linear-gradient(to right, var(--gisteiz-main-color-light-rgba-40), var(--gisteiz-main-color-light-rgba-20) 80%);
-    /*linear-gradient(to right, #001e57eb, #001e57 80%);*/
+  /*linear-gradient(to right, #001e57eb, #001e57 80%);*/
   /*background-size: 100% 100%;*/ /* optional */
   background-position:
     right top,
@@ -1571,8 +1571,12 @@ h6 {
 }
 a .badge:hover {
   /*text-decoration: none;*/
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow:
+    0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow:
+    0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .badge.badge-javascript {
   background-color: #f0db50;
@@ -1611,7 +1615,7 @@ a .badge:hover {
   padding-top: 1rem;
   padding-bottom: 0.5rem;
   border-radius: 0.25rem !important;
-  background: hsla(0, 0%, 100%, .5);
+  background: hsla(0, 0%, 100%, 0.5);
   box-shadow:
     0 2px 5px 0 rgba(0, 0, 0, 0.16),
     0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
@@ -1658,4 +1662,3 @@ a .badge:hover {
   border: 0.5px solid #e4e2e2;
   box-shadow: none;
 }
-
